demo/nginx/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nginx-demo
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nginx-demo
